# redex

./: .gitignore  Cargo.toml  TeX  cargo.toml  notes.txt  readme.md  tmp.py
docs/syntax/: Functions.md  Logic.md
js-testing/: lex-equation.js
lexer/: Cargo.toml
lexer/src/: instance.rs  lib.rs
lexer/src/instance/: collector.rs
parser/: Cargo.toml
parser/src/: lib.rs  parser.rs
parser/src/lexer/: mod.rs
parser/src/modules/: mod.rs
parser/src/modules/ast/: mod.rs
parser/src/modules/processor/: mod.rs
parser/src/parser/: ast.rs
parser/src/structures/: AST.rs  math.rs  mod.rs
parser/src/types/: ast.rs  mod.rs  token.rs
programs/: test.rx
redex/: Cargo.toml
redex/src/: main.rs  tests.rs
redex/src/modules/: datatypes.rs  mod.rs
redex/src/modules/context/: lowlevel.rs  mod.rs
redex/src/modules/types/: number.rs
src/: cli.rs  examples.rs  main.rs  tests.rs
src/runtime/: errors.rs  mod.rs  primitives.rs
src/runtime/primitives/: boolean.rs  dict.rs  function.rs  integer.rs  string.rs  traits.rs
src/runtime/standard/: mod.rs
src/runtime/standard/io/: input.rs  mod.rs  output.rs
src/runtime/standard/net/: mod.rs  net.rs
writeup/: Main.aux  Main.fdb_latexmk  Main.fls  Main.tex  NHH-Frontpage.tex  References.bib  apaeng.bst
writeup/Chapters/: 01Introduction.aux  01Introduction.fdb_latexmk  01Introduction.fls  01Introduction.out  01Introduction.tex  02Background.tex  03Data.tex  06Discussion.tex  Abstract.tex  Acknowledgements.tex  Appendix.tex  Notes.tex  Tips.tex
