[package]
name = "redex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Specify the ./parser directory as a dependency
parser = { path = "./parser" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
heapsize = "0.4.2"