[package]
name = "redex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexer = { path = "../lexer" }
parser = { path = "../parser" }

regex = "1.5"
bit-vec = "0.6.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }